[project]
name = "dapa-ew"
version = "0.1.0"
description = "Interactive spectral line fitting and Equivalent Width measurement tool"
authors = [
    {name = "Daniel Perez"}
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas"
]

[project.scripts]
dapa = "dapa.main:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"